using assited config tracing tool to create build configuration