@@ -1,14 +1,15 @@
 #!/bin/bash
 
+set -o xtrace
+
 native-image \
-  -jar ./target/server-1.0.jar --allow-incomplete-classpath \
-  -J--add-exports=java.management/sun.management=ALL-UNNAMED \
-  -H:ReflectionConfigurationFiles=./reflection-config.json \
-  -H:ResourceConfigurationFiles=./resource-config.json \
-  -H:DynamicProxyConfigurationFiles=./proxy-config.json \
-  -H:+StaticExecutableWithDynamicLibC \
+  -jar ./target/server-1.0.jar \
+  -H:ConfigurationFileDirectories=./assisted-config \
+  -H:+ReportExceptionStackTraces \
   -H:+TraceNativeToolUsage \
+  --allow-incomplete-classpath \
   --native-image-info \
   --verbose \
   --no-fallback \
+  -H:+StaticExecutableWithDynamicLibC \
   --static
